resolve main layout issue

--- a/scss/scss/_layout.scss
+++ b/scss/scss/_layout.scss
@@ -16,6 +16,7 @@
 
                     @extend .d-flex;
                     @extend .h-100;
+                    @extend pb-4;
 
                     .left-panel {
                         @extend .pt-4;
